--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,14 @@
     <link rel="stylesheet" href="css/contentStyle_pc.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/OA.css">
+    <link rel="stylesheet" href="css/OA_header.css">
+    <link rel="stylesheet" href="css/OA_footer.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/swiper.min.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
 </head>
+
 <body>
     <div class="contianer">
         <div class="header">
@@ -29,29 +36,302 @@
                 <p class="primary"><i></i>400-645-6677</p>
             </div>
         </div>
-        <div class="content">
-            <div class="content_title_box">
-                <div class="content_title">
-                    <h2>云创智慧</h2>
-                    <h2>OA系统</h2>
-                    <p>全面解决办公协同需求<br/>支撑部门高效协作</p>
-                    <a class="primary" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
+        <div class="banner_box">
+            <div class="banner">
+                <div class="yuan">
+                    <div class="neiyuan">
+                        <div id="yuan1"><a href="#"><img src="images/index/OA@2x.png"></a></div>
+                        <div id="yuan2"><a href="#"><img src="images/index/CRM1@2x.png"></a></div>
+                        <div id="yuan3"><a href="#"><img src="images/index/CR2@2x.png"></a></div>
+                        <div id="yuan4"><a href="#"><img src="images/index/4.png"></a></div>
+                        <div id="yuan5"><a href="#"><img src="images/index/PM@2x.png"></a></div>
+                        <div id="yuan6"><a href="#"><img src="images/index/WMS@2x.png"></a></div>
+                        <div id="yuan7"><a href="#"><img src="images/index/ERP@2x.png"></a></div>
+                        <div id="yuan8"><a href="#"><img src="images/index/yuan8.@2x.png"></a></div>
+                        <div id="zhongxin">
+                            <img src="./images/index/logo_btn.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="carousel_bg">
-                <h2 class="primary">让协同办公简单高效</h2>
-                <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
-                <a href="#" class="bg_primary" style="color: #fff">免费体验</a>
-
-                <div class="carousel">
-                    <img src="images/OA/OA1.png" >
-                    <img src="images/OA/OA2.png" >
-                    <img src="images/OA/OA3.png" >
+        </div>
+        <div class="progress_box">
+            <h2 class="index_title">办公效率太低？云创办公助您升级</h2>
+            <div class="progress">
+                <ul class="progress_title">
+                    <li><a href="#">系统太多，运营成本水涨船高</a></li>
+                    <li><a href="#">系统太多，运营成本水涨船高</a></li>
+                    <li><a href="#">信息不通，部门推诿踢皮球</a></li>
+                    <li><a href="#">数据表格一大堆，谁看谁头痛 </a></li>
+                    <li><a href="#">客户商机如何找？销售一问三不知</a></li>
+                </ul>
+                <div class="progress_r">
+                    <ul class="fenduan">
+                        <li>
+                            <div class="" style="position: relative; left: -2px;">
+                                <div class="huakuai">
+                                </div>
+                            </div>
+                            <i class="baitiao"></i>
+                        </li>
+                        <li>
+                            <div class="huankuai_btn" style="position: relative; left: -1px;">
+                                <div class="huakuai"></div>
+                            </div>
+                            <i class="baitiao" style="width: 0"></i>
+                        </li>
+                        <li>
+                            <div class="">
+                                <div class=""></div>
+                            </div>
+                            <i class="baitiao" style="width: 0"></i>
+                        </li>
+                        <li>
+                            <div class="" style="position: relative; left: 1px;">
+                                <div class=""></div>
+                            </div>
+                            <i class="baitiao" style="width: 0"></i>
+                        </li>
+                        <li>
+                            <div class="" style="position: relative; left: 2px;">
+                                <div class=""></div>
+                            </div>
+                            <i class="baitiao" style="width: 0"></i>
+                        </li>
+                    </ul>
                 </div>
+            </div>
+        </div>
 
+        <div class="zhanshi_box">
+            <h2 class="index_title">智慧企业一体化办公平台</h2>
+            <p class="zhanshi_cont" style="margin-top: 20px;margin-bottom:120px">
+                云创办公是集工作沟通、办公软件集成、数据分析等功能为一体的智能化办公软件服务系统平台</p>
+            <div class="zhanshi_dongxiao"></div>
+        </div>
+
+        <div class="fun_list_box" style="margin-top: 120px">
+            <h2 class="index_title">便捷的沟通工具，快速反应，及时反馈</h2>
+            <div class="fun_list">
+                <div class="fun_item">
+                    <img src="images/index/list1.png">
+                    <p class="fun_item_t">你的全能会议助手</p>
+                    <p class="fun_item_c">管理会议，让会议有传达、有分解、有结果</p>
+                </div>
+                <div class="fun_item">
+                    <img src="images/index/list2.png">
+                    <p class="fun_item_t">不一样的安全邮箱</p>
+                    <p class="fun_item_c"> 提高邮箱数据安全性，优化你的邮箱体验</p>
+                </div>
+                <div class="fun_item">
+                    <img src="images/index/list3.png">
+                    <p class="fun_item_t">随时随地闪速协同</p>
+                    <p class="fun_item_c">快速沟通，智能通讯，平台信息化预警</p>
+                </div>
+                <div class="fun_item">
+                    <img src="images/index/list4.png">
+                    <p class="fun_item_t">5G时代的网络通话</p>
+                    <p class="fun_item_c"> 大幅度为企业降低通讯成本简单拨号，快速协同</p>
+                </div>
+                <div class="fun_item">
+                    <img src="images/index/list5.png">
+                    <p class="fun_item_t">无门槛的分享平台</p>
+                    <p class="fun_item_c">部门分享，可沉淀、复制的工作经验</p>
+                </div>
+                <div class="fun_item">
+                    <img src="images/index/list6.png">
+                    <p class="fun_item_t">高效安全多人群聊</p>
+                    <p class="fun_item_c"> 组织内实名制聊天，高效传达，群聊信息不丢失</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="project_box">
+            <h2 class="index_title">全方位企业服务，帮助企业节省成本，轻装上阵</h2>
+            <div class="project_list">
+                <div class="project_item">
+                    <h2>云创智慧OA</h2>
+                    <p>日程管理</p>
+                    <p>移动审批</p>
+                    <p>考勤打卡</p>
+                    <p>工作汇报</p>
+                    <p>物资采购</p>
+                </div>
+                <div class="project_item">
+                    <h2>云创CRM</h2>
+                    <p>客户信息</p>
+                    <p>销售线索</p>
+                    <p>商机管理</p>
+                    <p>客户跟进</p>
+                    <p>订单管理</p>
+                </div>
+                <div class="project_item">
+                    <h2>云创HRM</h2>
+                    <p>员工招聘</p>
+                    <p>员工信息</p>
+                    <p>薪酬福利</p>
+                    <p>培训管理</p>
+                    <p>绩效管理</p>
+                </div>
+                <div class="project_item">
+                    <h2>云创PM</h2>
+                    <p>立项管理</p>
+                    <p>项目计划</p>
+                    <p>数据分析</p>
+                    <p>在线沟通</p>
+                    <p>文档共享</p>
+                </div>
+                <div class="project_item">
+                    <h2>企业培训</h2>
+                    <p>课程管理</p>
+                    <p>课程直播</p>
+                    <p>学习社区</p>
+                    <p>学分激励</p>
+                    <p>学习中心</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="industry_box">
+            <h2 class="index_title">专属的企业解决方案，你需要的都在这里</h2>
+            <div class="industry">
+                <div class="industry_img">
+                    <img src="./images/index/hangye1.jpg">
+                    <img src="./images/index/hangye2.jpg">
+                    <img src="./images/index/hangye3.jpg">
+                    <img src="./images/index/hangye4.jpg">
+                </div>
+                <div class="industry_btn">
+                    <div class="btn_show">地产行业 <i></i></i></div>
+                    <div class="">制造行业 <i></i></div>
+                    <div class="">商贸行业 <i></i></div>
+                    <div class="">服装行业 <i></i></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="pattern_box" style="margin-top: 120px;margin-bottom: 104px;">
+            <h2 class="index_title">云创办公-提升企业运营“格局”</h2>
+            <div class="pattern">
+                <div class="pattern_left" style=" background: url('./images/index/geju_bg.png');">
+                    <h2>传统企业系统</h2>
+                    <img src="./images/index/geju1.png">
+                    <div>
+                        <p>多套系统，管理多杂乱无章</p>
+                        <p>信息障碍，员工对接时效差</p>
+                        <p>管理困难，人工耗损成本高</p>
+                    </div>
+                </div>
+                <i class="shuxian"></i>
+                <div class="pattern_left">
+                    <h2>传统企业系统</h2>
+                    <img src="./images/index/geju1.png">
+                    <div>
+                        <p>多套系统，管理多杂乱无章</p>
+                        <p>信息障碍，员工对接时效差</p>
+                        <p>管理困难，人工耗损成本高</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="brand_container">
+            <div class="brand">
+                <h2 class="primary" style="color: #000;margin-bottom: 15px">超过30万家企业使用云创办公</h2>
+                <p>行业深耕，专业解决全流程、全周期办公需求，驱动企业数据化管理进程，实现高效自由的业务模式。</p>
+                <div class="brand_content">
+                    <img src="./images/OA/brand1.png" alt="">
+                </div>
+                <div class="brand_btn">
+                    <ul>
+                        <li>
+                            <img src="./images/index/btn1.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn2.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn3.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn4.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn5.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn6.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn7.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn8.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn9.png" alt="">
+                        </li>
+                        <li>
+                            <img src="./images/index/btn10.png" alt="">
+                        </li>
+                    </ul>
+                </div>
+                <script>
+                    $(".brand_btn ul li").on('click', function () {
+                        var i = $(this).index() + 1
+                        $($('.brand_content').children()[0]).attr('src', './images/OA/brand' + i + '.png')
+                    })
+                </script>
+                <div style="margin-top: 60px">
+                    <h2 class="primary" style="color: #000;margin-bottom: 15px">超过30万家企业使用云创办公</h2>
+                    <p>行业深耕，专业解决全流程、全周期办公需求，驱动企业数据化管理进程，实现高效自由的业务模式。</p>
+                    <a class=" tiyan_btn bg_primary" href="#" style="color: #fff;margin-top: 45px">免费体验</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footer_detail">
+                <ul class="fun">
+                    <li><a href="#">功能</a></li>
+                    <li><a href="#">日程管理</a></li>
+                    <li><a href="#">移动审批</a></li>
+                    <li><a href="#">考勤打卡</a></li>
+                    <li><a href="#">工作汇报</a></li>
+                    <li><a href="#">物资采购</a></li>
+                </ul>
+                <ul class="fun">
+                    <li><a href="#">行业解决方案</a></li>
+                    <li><a href="#">地产业</a></li>
+                    <li><a href="#">服装业</a></li>
+                    <li><a href="#">制造业</a></li>
+                    <li><a href="#">商贸业</a></li>
+                </ul>
+                <ul class="fun">
+                    <li><a href="#">客户案例</a></li>
+                    <li><a href="#">产品定制</a></li>
+                    <li><a href="#">加盟合作</a></li>
+                </ul>
+                <ul class="fun">
+                    <li><a href="#">联系我们</a></li>
+                    <li><a href="#">400-645-667</a></li>
+                </ul>
+                <ul class="fun">
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">微信公众号</a></li>
+                    <li><img src="./images/OA/erweima.png"></li>
+                </ul>
+            </div>
+            <div class="record">
+                <div style="padding-right: 24px">
+                    <img src="./images/OA/logo.png">
+                </div>
+                <div class="rec">
+                    <p>Copyright &copy; 2018 青岛云创智能集团有限公司 版权所有 </p>
+                    <p>公司地址：山东省青岛市市北区龙城路31号卓越世纪中心4号楼6L</p>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
