--- a/OA.html
+++ b/OA.html
@@ -158,34 +158,34 @@
                 <div class="brand_btn">
                     <ul>
                         <li>
-                            <img src="./images/OA/btn1.png" alt="">
+                            <img src="./images/index/btn1.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn2.png" alt="">
+                            <img src="./images/index/btn2.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn3.png" alt="">
+                            <img src="./images/index/btn3.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn4.png" alt="">
+                            <img src="./images/index/btn4.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn5.png" alt="">
+                            <img src="./images/index/btn5.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn6.png" alt="">
+                            <img src="./images/index/btn6.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn7.png" alt="">
+                            <img src="./images/index/btn7.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn8.png" alt="">
+                            <img src="./images/index/btn8.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn9.png" alt="">
+                            <img src="./images/index/btn9.png" alt="">
                         </li>
                         <li>
-                            <img src="./images/OA/btn10.png" alt="">
+                            <img src="./images/index/btn10.png" alt="">
                         </li>
                     </ul>
                 </div>
