--- a/index.html
+++ b/index.html
@@ -25,11 +25,28 @@
                 <img src="./images/OA/logo.png">
             </div>
             <ul class="menu_box">
-                <li><a href="">首页</a></li>
-                <li><a href="">产品</a></li>
-                <li><a href="">解决方案</a></li>
-                <li><a href="">服务与支持</a></li>
-                <li><a href="">关于云创办公</a></li>
+                <li>
+                    <a href="">首页</a>
+                </li>
+                <li>
+                    <a href="">产品</a>
+                    <ul class="hover_menu">
+                        <li><a href="#">OA</a></li>
+                        <li><a href="#">CRM</a></li>
+                        <li><a href="#">HRM</a></li>
+                        <li><a href="#">PM</a></li>
+                        <li><a href="#">企业培训</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">解决方案</a>
+                </li>
+                <li>
+                    <a href="">服务与支持</a>
+                </li>
+                <li>
+                    <a href="">关于云创办公</a>
+                </li>
             </ul>
             <div class="phone">
                 <a class="primary">免费试用</a>
