--- a/OA.html
+++ b/OA.html
@@ -153,7 +153,8 @@
                 <h2 class="primary" style="color: #000;margin-bottom: 15px">超过30万家企业使用云创办公</h2>
                 <p>行业深耕，专业解决全流程、全周期办公需求，驱动企业数据化管理进程，实现高效自由的业务模式。</p>
                 <div class="brand_content">
-                    <img src="./images/OA/brand1.png" alt="">
+                    <img src="./images/OA/brand7.png" alt="">
+                    aaa
                 </div>
                 <div class="brand_btn">
                     <ul>
