--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
+    <script src="js/global.js"></script>
 </head>
 
 <body>
@@ -25,10 +26,11 @@
                 <img src="./images/OA/logo.png">
             </div>
             <ul class="menu_box">
-                <li>
+                <li class="">
                     <a href="">首页</a>
+                    <i class="blue_border"></i>
                 </li>
-                <li>
+                <li class="">
                     <a href="">产品</a>
                     <ul class="hover_menu">
                         <li><a href="#">OA</a></li>
@@ -37,15 +39,25 @@
                         <li><a href="#">PM</a></li>
                         <li><a href="#">企业培训</a></li>
                     </ul>
+                    <i class="blue_border"></i>
                 </li>
-                <li>
+                <li class="">
                     <a href="">解决方案</a>
+                    <ul class="hover_menu">
+                        <li><a href="#">制造业</a></li>
+                        <li><a href="#">服装业</a></li>
+                        <li><a href="#">地产业</a></li>
+                        <li><a href="#">商贸业</a></li>
+                    </ul>
+                    <i class="blue_border"></i>
                 </li>
-                <li>
+                <li class="">
                     <a href="">服务与支持</a>
+                    <i class="blue_border"></i>
                 </li>
-                <li>
+                <li class="">
                     <a href="">关于云创办公</a>
+                    <i class="blue_border"></i>
                 </li>
             </ul>
             <div class="phone">
@@ -65,7 +77,7 @@
                         <div id="yuan6"><a href="#"><img src="images/index/WMS@2x.png"></a></div>
                         <div id="yuan7"><a href="#"><img src="images/index/ERP@2x.png"></a></div>
                         <div id="yuan8"><a href="#"><img src="images/index/yuan8.@2x.png"></a></div>
-                        <div id="zhongxin">
+                        <div id="zhongxin" style="z-index: 999">
                             <img src="./images/index/logo_btn.png" alt="">
                         </div>
                     </div>
