--- a/CRM.html
+++ b/CRM.html
@@ -28,8 +28,8 @@
             width: 391px;
         }
         .swiper-wrapper .swiper-slide img {
-            width: 391px;
-            height: 391px;
+           width: auto;
+           height: auto;
         }
     </style>
 </head>
