--- a/CRM.html
+++ b/CRM.html
@@ -12,25 +12,13 @@
     <link rel="stylesheet" href="css/OA.css">
     <link rel="stylesheet" href="css/OA_header.css">
     <link rel="stylesheet" href="css/OA_footer.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
-        .swiper-container {
-            height: 601px;
-            margin-bottom: 60px;
-        }
 
-        .swiper-wrapper {}
-
-        .swiper-wrapper .swiper-slide {
-            width: 391px;
-        }
-        .swiper-wrapper .swiper-slide img {
-           width: auto;
-           height: auto;
-        }
     </style>
 </head>
 
@@ -50,44 +38,97 @@
                 </div>
             </div>
         </div>
-        <div class="carousel_bg">
+        <div class="carousel_bg" style="padding:0;padding-top:40px;position: relative;background: url('#')">
             <h2 class="primary">重构企业与客户的连接方式</h2>
             <p>云创CRM客户管理系统，覆盖客户销售、客户营销、客户服务的全生命周期管
                 理，智能管理业务流程，激发业绩持续增长。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/CRM/CRM1.png" alt=""></div>
-                    <div class="swiper-slide"><img src="images/CRM/CRM2.png" alt=""></div>
-                    <div class="swiper-slide"><img src="images/CRM/CRM3.png" alt=""></div>
+
+
+
+            <div class="swiper-container-solution">
+                <div class="selected-solution">
+                    <div>
+                        <div class="swiper-container">
+                            <div class="solution-cardlist swiper-wrapper">
+                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
+                                    <div class="solution-card">
+                                        <img src="images/CRM/CRM1.png" width="100%">
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
+                                    <div class="solution-card" style="padding:0 20px">
+                                        <img src="images/CRM/CRM2.png" width="100%">
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
+                                    <div class="solution-card">
+                                        <img src="images/CRM/CRM3.png" width="100%">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-pagination solution-pagination"></div>
+                        </div>
+                    </div>
                 </div>
-                <!-- 如果需要分页器 -->
-                <div class="swiper-pagination"></div>
             </div>
+            <!-- <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="images/CRM/CRM1.png" alt="" width="100%"></div>
+                        <div class="swiper-slide"><img src="images/CRM/CRM2.png" alt="" width="100%"></div>
+                        <div class="swiper-slide"><img src="images/CRM/CRM3.png" alt="" width="100%"></div>
+                    </div>
+                     如果需要分页器  
+                    <div class="swiper-pagination"></div>
+                </div> -->
+
+
             <h2 class="primary">打造全流程的客户管理体系</h2>
             <p>实现从线索到回款的全流程管理，让企业借助云创CRM管理客户关系、销售过程、营销活动
                 以及服务支持，完成更多销售业绩。</p>
             <script>
-                var mySwiper = new Swiper('.swiper-container', {
-                    // direction: 'vertical', // 垂直切换选项
-                    loop: true, // 循环模式选项
-                    // autoplay: true,
-                    // 如果需要分页器
-                    pagination: {
-                        el: '.swiper-pagination',
-                        type: 'bullets',
-                        progressbarOpposite: true,
-                    },
+                $(function () {
+                    new Swiper(".swiper-container", {
 
-                    // 如果需要前进后退按钮
-                    navigation: {
-                        nextEl: '.swiper-button-next',
-                        prevEl: '.swiper-button-prev',
-                    },
-                    // slidesOffsetBefore : 100,
-                    slidesPerView: 2,
-                    centeredSlides: true,
+                        //默认功能属性
+                        speed: 300,
+                        slidesPerView: 3,
+                        spaceBetween: 0,
+                        slidesPerGroup: 1,
+                        loop: true,
+                        autoplay: true,
+
+                        //分页索引
+                        pagination: {
+                            el: ".swiper-pagination",
+                            clickable: true
+                        }
+                    });
                 })
+                
+                // var mySwiper = new Swiper('.swiper-container', {
+                //     // direction: 'vertical', // 垂直切换选项
+                //     loop: true, // 循环模式选项
+                //     autoplay: true,
+                //     // 如果需要分页器
+                //     pagination: {
+                //         el: '.swiper-pagination',
+                //         type: 'bullets',
+                //         progressbarOpposite: true,
+                //     },
+
+                //     // 如果需要前进后退按钮
+                //     navigation: {
+                //         nextEl: '.swiper-button-next',
+                //         prevEl: '.swiper-button-prev',
+                //     },
+                //     // slidesOffsetBefore : 100,
+                //     slidesPerView: 2,
+                //     centeredSlides: true,
+                //     onSlideChangeEnd: function (swiper) {
+                //         alert(swiper.activeIndex) //切换结束时，告诉我现在是第几个slide
+                //     }
+                // })
             </script>
         </div>
         <div class="OA_detail_container">
