--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div id="yuan7">
                             <img src="images/index/ERP@2x.png">
                             <div class="yuan_hover_box">
-                                <a href="OA.html"></a>
+                                <a href="OA.html" class="yuan7_a"></a>
                             </div>
                         </div>
                         <div id="yuan8">
@@ -91,6 +91,7 @@
                         <div id="zhongxin" style="z-index: 999">
                             <img src="./images/index/logo_btn.png" alt="">
                         </div>
+                        <!-- todo -->
                     </div>
                 </div>
             </div>
@@ -562,7 +563,7 @@
 
         <div class="jian_bian_tiao"></div>
 
-        <div class="industry_box">
+        <div class="industry_box" style="margin-top: 0">
             <h2 class="index_title" style="color:#fff">专属的企业解决方案，你需要的都在这里</h2>
             <div class="industry">
                 <div class="industry_img">
