解决圆盘了  开心

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
+        .yuan_hover_box:hover+img {
+            transform: scale(1.1)
+        }
     </style>
 </head>
 
@@ -41,52 +44,60 @@
                 <div class="yuan">
                     <div class="neiyuan">
                         <div id="yuan1">
-                            <img src="images/index/OA@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/OA@2x.png">
+
                         </div>
                         <div id="yuan2">
-                            <img src="images/index/CRM1@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/CRM1@2x.png">
+
                         </div>
                         <div id="yuan3">
-                            <img src="images/index/CR2@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/CR2@2x.png">
+
                         </div>
                         <div id="yuan4">
-                           <img src="images/index/4.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/4.png">
+
                         </div>
                         <div id="yuan5">
-                            <img src="images/index/PM@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/PM@2x.png">
+
                         </div>
                         <div id="yuan6">
-                            <img src="images/index/WMS@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/WMS@2x.png">
+
                         </div>
                         <div id="yuan7">
-                            <img src="images/index/ERP@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html" class="yuan7_a"></a>
                             </div>
+                            <img src="images/index/ERP@2x.png">
+
                         </div>
                         <div id="yuan8">
-                            <img src="images/index/yuan8.@2x.png">
                             <div class="yuan_hover_box">
                                 <a href="OA.html"></a>
                             </div>
+                            <img src="images/index/yuan8.@2x.png">
+
                         </div>
                         <div id="zhongxin" style="z-index: 999">
                             <img src="./images/index/logo_btn.png" alt="">
